@@ -1,3 +1,7 @@
+NOTE: this file is no longer maintained and is replaced by the IzPack JIRA at
+http://jira.codehaus.org/browse/IZPACK
+
+
 Release 2.2 (2007.02.24) [release-2.2]
 
 2007.02.20 (Julien Ponge)
